manifest/thaijo/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thaijo-api
  namespace: thaijo
spec:
  replicas: 9
  selector:
    matchLabels:
      app: thaijo-api
  template:
    metadata:
      labels:
        app: thaijo-api
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: thaijo-api
      containers:
        - name: api
          image: taotoxicboy/thaijo:dev-20260406
          imagePullPolicy: IfNotPresent
          command:
            - uvicorn
            - main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          ports:
            - containerPort: 8000
              name: http
