manifest/thaijo/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thaijo-api
  namespace: thaijo
spec:
  selector:
    app: thaijo-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
