manifest/thaijo/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thaijo-redis
  namespace: thaijo
spec:
  selector:
    app: thaijo-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
