manifest/thaijo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thaijo-api
  namespace: thaijo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - thaijo.iaaaiksu.com
      secretName: thaijo-iaaaiksu-com-tls
  rules:
    - host: thaijo.iaaaiksu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thaijo-api
                port:
                  number: 80
